attached_assets/Pasted--server-scripts-npx-tsx-testOmniBridgeIntegration-ts-node-internal-process-esm-loader-34--1755294814500_1755294814500.txt
~/.../server/scripts$ npx tsx testOmniBridgeIntegration.ts

node:internal/process/esm_loader:34
      internalBinding('errors').triggerUncaughtException(
                                ^
Error [ERR_MODULE_NOT_FOUND]: Cannot find module '/home/runner/workspace/server/shared/schema' imported from /home/runner/workspace/server/modules/omnibridge/infrastructure/repositories/DrizzleChannelRepository.ts
    at finalizeResolution (node:internal/modules/esm/resolve:265:11)
    at moduleResolve (node:internal/modules/esm/resolve:933:10)
    at defaultResolve (node:internal/modules/esm/resolve:1157:11)
    at nextResolve (node:internal/modules/esm/hooks:866:28)
    at resolveBase (file:///home/runner/workspace/node_modules/tsx/dist/esm/index.mjs?1755294736780:2:3811)
    at async resolveDirectory (file:///home/runner/workspace/node_modules/tsx/dist/esm/index.mjs?1755294736780:2:4304)
    at async resolve (file:///home/runner/workspace/node_modules/tsx/dist/esm/index.mjs?1755294736780:2:5422)
    at async nextResolve (node:internal/modules/esm/hooks:866:22)
    at async Hooks.resolve (node:internal/modules/esm/hooks:304:24)
    at async handleMessage (node:internal/modules/esm/worker:196:18) {
  code: 'ERR_MODULE_NOT_FOUND',
  url: 'file:///home/runner/workspace/server/shared/schema'
}

Node.js v20.12.2
~/.../server/scripts$ npx tsx testOmniBridgeIntegration.ts
/home/runner/workspace/server/modules/omnibridge/infrastructure/repositories/DrizzleChannelRepository.ts:3
import { schema } from '../../../../../shared/schema';
         ^

SyntaxError: The requested module '../../../../../shared/schema' does not provide an export named 'schema'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:134:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:217:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:323:24)
    at async loadESM (node:internal/process/esm_loader:28:7)
    at async handleMainPromise (node:internal/modules/run_main:113:12)